# microsservicos-checkout-api

./: .env.example  .gitignore  README.md  architecture.drawio  docker-compose.yml  pyproject.toml  request.http  run_dev.sh
app/: client_manager.py  main.py
app/checkout/: checkout_model.py  checkout_process.py  checkout_request.py  router.py
app/infra/: dabase.py
app/infra/client/: inventory_client.py  order_client.py  payment_client.py
wiremock/payment/mappings/: insufficient_fund.json  server_500.json  success.json
